# fisher-simplex

./: .gitignore  README.md  SPEC.md  pyproject.toml
.cardinal/: code-review.md
.github/workflows/: workflow.yml
docs/: mathematical_notes.md  quickstart.md  user_guide.md
examples/: attention_atlas.md  basic_geometry.py  biodiversity_concentration.py  distributional_shift.py  frontier_discrimination.py  frontier_enrichment.py  llm_token_geometry.py  portfolio_rebalancing.py  sparse_zeros.py
src/fisher_simplex/: __init__.py  analysis.py  core.py  frontier.py  generators.py  geometry.py  harmonic.py  interp.py  utils.py  viz.py
tests/: conftest.py  test_analysis.py  test_core.py  test_frontier.py  test_generators.py  test_geometry.py  test_harmonic.py  test_interp.py  test_utils.py  test_viz.py
