[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fisher-simplex"
version = "0.3.1"
description = "Canonical simplex geometry via the Fisher amplitude lift, with low-complexity invariant tools"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.5"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[dependency-groups]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/fisher_simplex"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
